src/Test/Fixtures/Bad/Types/unexpectedSecondParamAfterInitializer.lf
let theta: Param = param("theta") param("gamma");